Fixes for gutenberg blocks on mobile, fix table block width

--- a/sass/gutenberg/blocks/_core-blockquote.scss
+++ b/sass/gutenberg/blocks/_core-blockquote.scss
@@ -1,12 +1,10 @@
 // Core/blockquote block
-
 blockquote + cite,
 blockquote + p > cite {
   margin-bottom: 4rem;
 }
 
-blockquote,
-blockquote.wp-block-quote {
+.wp-block-quote {
   border-left: 2px solid var(--color-blockquote);
   line-height: var(--line-height-paragraphs-blog);
   margin-bottom: 4rem;
@@ -18,7 +16,7 @@ blockquote.wp-block-quote {
 
   @media (max-width: $width-max-article + 40px) {
     padding: 3.5rem 2rem;
-    width: calc(100% - 4rem);
+    width: calc(100% - calc(var(--padding-container-horizontal) * 2));
   }
 
   @media (max-width: $container-mobile) {
