--- a/sass/gutenberg/blocks/_core-gallery.scss
+++ b/sass/gutenberg/blocks/_core-gallery.scss
@@ -23,7 +23,7 @@
   &.alignfull {
     padding-left: var(--padding-container-horizontal);
     padding-right: var(--padding-container-horizontal);
-    width: calc(100% - calc(var(--padding-container-horizontal) * 2));
+    width: 100%;
   }
 }
 
