--- a/sass/gutenberg/blocks/_core-pullquote.scss
+++ b/sass/gutenberg/blocks/_core-pullquote.scss
@@ -1,4 +1,10 @@
 // Core/pullquote block
+.wp-block-pullquote {
+  @media (max-width: $width-grid-base + 40px) {
+    width: calc(100% - calc(var(--padding-container-horizontal) * 2));
+  }
+}
+
 .wp-block-pullquote.alignwide,
 .wp-block-pullquote.alignfull {
   padding-left: 0;
@@ -7,7 +13,6 @@
   @media (max-width: $width-grid-base + 40px) {
     margin-left: var(--padding-container-horizontal);
     margin-right: var(--padding-container-horizontal);
-    width: calc(100% - calc(var(--padding-container-horizontal) * 2));
   }
 }
 
