--- a/sass/gutenberg/blocks/_core-text-columns.scss
+++ b/sass/gutenberg/blocks/_core-text-columns.scss
@@ -5,15 +5,20 @@
   width: 100%;
 }
 
+.wp-block-columns .wp-block-column p:only-of-type,
+.wp-block-text-columns .wp-block-column p:only-of-type {
+  margin-top: 0;
+}
+
 // Loops to enumerate the classes for columns.
 @for $i from 1 through 9 {
-  .wp-block-text-columns.has-#{$i}-columns.alignfull {
+  .wp-block-text-columns.columns-#{$i}.alignfull {
     padding-left: var(--padding-container-horizontal);
     padding-right: var(--padding-container-horizontal);
     width: 100%;
   }
 
-  .wp-block-text-columns.has-#{$i}-columns {
+  .wp-block-text-columns.columns-#{$i} {
     @media (max-width: 900px) {
       display: grid;
       grid-gap: 1em;
